[package]
name = "rust_project"
description = "TicTacToe game"
version = "0.1.0"
authors = ["Jon <jdefilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3